fixed mobile overflow-x

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -18,6 +18,10 @@ body{
   }
 }
 
+.page{
+  overflow-x: hidden;
+}
+
 .menu.row,
 .header.row{
   margin-left: -1px;
